fix P1P (Space) Customers Logo verticle align middle

--- a/css/main_space.css
+++ b/css/main_space.css
@@ -353,6 +353,9 @@ html, body {
       margin-bottom: 20px;
       vertical-align: middle;
       margin: 0 auto;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
   }
 
   .uc {
